--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "15.3.5",
     "prisma": "^6.12.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
